--- a/index.html
+++ b/index.html
@@ -22,8 +22,8 @@
       <label for="query">Query:</label>
       <textarea id="query" name="query" rows="4" required></textarea>
 
-      <label for="destination">Destination:</label>
-      <input type="text" id="destination" name="destination" required>
+      <label for="email">Email ID:</label>
+      <input type="text" id="email" name="email" required>
 
       <button type="submit">Submit</button>
     </form>
