app update version 2.0

--- a/index.html
+++ b/index.html
@@ -3,12 +3,12 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Travel Query Form</title>
+  <title>Contact Me</title>
   <link rel="stylesheet" href="styles.css">
 </head>
 <body>
   <div class="container">
-    <h1>Travel Query Form</h1>
+    <h1>Contact Me</h1>
     <form id="travelForm">
       <label for="name">Name:</label>
       <input type="text" id="name" name="name" required>
